# ucode-ls-command

./: .gitignore  LICENSE  README.md
ULS/: CMakeLists.txt  main.c  result.txt  uls
ULS/inc/: includes.h  prototypes.h  structures.h  uls.h
ULS/libmx/inc/: libmx.h
ULS/libmx/src/: mx_realloc.c
ULS/src/: loop.c  run.c  test_L_flag.c  test_R_flag.c
ULS/src/base/: init_files.c  init_flags.c  init_ls.c  init_main.c  t_ls_l_data.c
ULS/src/erros/: error.c
ULS/src/helpers/: check_args.c  check_flags.c  is_dir.c  is_file.c  print_base.c  re_print.c
ULS/src/parsers/: get_color.c  get_file_name.c  get_file_type.c  get_hidden.c  get_id_name.c  get_lstat.c  get_rights_str.c  get_term_width.c  get_xattr.c  mx_ls_get_time_str.c  read_dir.c
ULS/src/print_results/: print_standart_string.c
ULS/src/printers/: ls_print.c  print.c  print_C.c  print_color.c  print_l.c  print_link_name.c  print_rights.c
ULS/src/sorting/: run_sort.c
ULS/src/utils/: clean_struct.c  count_in_dir.c  cutter.c  find_in_str.c  find_max_length_gid.c  find_max_length_uid.c  get_arr_size.c  get_ino_dev_fd.c  get_max_file_size.c  get_max_size_nlink.c  get_num_len.c  insert_lstat.c  linear_search.c  maj_min_print.c  malloc_array.c  malloc_char_array.c  malloc_request.c  malloc_struct_array.c  print_format_str.c  swap_files.c
ULS/src/validate/: check_character_files.c  clear_flags.c  valid_name.c  validate_flags.c
ULS/test_dir/: c_file.cpp  c_file.h
ULS/test_dir/sample/: result.txt
ULS/test_dir/sample/test/: ULS
ULS/test_dir/test/: test
